fixed scroll on edit

--- a/src/app/components/profile-page/prof-description/data-view/data-view.component.html
+++ b/src/app/components/profile-page/prof-description/data-view/data-view.component.html
@@ -1,9 +1,9 @@
-<mat-list class="bb-user-data">
+<mat-list>
 
     <mat-list-item>
         <p>{{user.description}}</p>
     </mat-list-item>
-    
+
     <mat-list-item>
         <mat-icon mat-list-icon color="primary">calendar_today</mat-icon>
         <div mat-line>Birthdate</div>
