--- a/src/app/components/profile-page/prof-description/profile-description/profile-description.component.sass
+++ b/src/app/components/profile-page/prof-description/profile-description/profile-description.component.sass
@@ -1,21 +1,22 @@
-.bb-edit
-    display: flex
-    justify-content: end
-    position: fixed
-    bottom: 0
-    z-index: 99999
-    width: 95%
-    padding: 5%
-
-.bb-btn-edit 
-    &hover
-        cursor: pointer
+.bb-btn-edit
+  &hover
+      cursor: pointer
 
 .bb-edition-opt
-    display: flex
-    justify-content: center
-    width: 95%
-    padding: 5%
+  display: flex
+  justify-content: center
+  width: 100%
+  margin: auto
+  padding: 5%
 
 .bb-btn-change
-    margin-right: 5%
+  margin-right: 5%
+  font-family: 'Montserrat'
+  font-weight: 600
+
+.bb-description
+  width: 90%
+  max-height: calc(85vh - 12.7rem)
+
+  display: block
+  margin: auto
