--- a/src/app/components/profile-page/prof-description/profile-description/profile-description.component.html
+++ b/src/app/components/profile-page/prof-description/profile-description/profile-description.component.html
@@ -1,18 +1,13 @@
-<div>
-    <div class="bb-show" *ngIf="!isEdit">
-        <app-data-view [user]="user"></app-data-view>
-    </div>
-    <div class="bb-edition" *ngIf="isEdit">
-        <app-edition-form [user]="user"></app-edition-form>
-    </div>
-</div>
+<div class="bb-description">
+  <app-data-view *ngIf="!isEdit" [user]="user"></app-data-view>
+  <app-edition-form *ngIf="isEdit" [user]="user"></app-edition-form>
 
-<div class="bb-edition-opt">
-    <button mat-raised-button color="primary" (click)="onChanges()" *ngIf="isEdit" class="bb-btn-change">
-        Save Changes
+  <div class="bb-edition-opt" *ngIf="isEdit">
+    <button mat-raised-button class="bb-btn bb-btn-change" (click)="onChanges()">
+      DISMISS
     </button>
-    <button mat-raised-button color="warm" (click)="onChanges()" *ngIf="isEdit" class="bb-btn-change">
-        Dismiss
+    <button mat-raised-button class="bb-btn bb-btn-change" color="primary" (click)="onChanges()" >
+      SAVE CHANGES
     </button>
+  </div>
 </div>
-
