--- a/src/app/components/profile-page/prof-description/data-view/data-view.component.html
+++ b/src/app/components/profile-page/prof-description/data-view/data-view.component.html
@@ -11,7 +11,7 @@
     </mat-list-item>
 
     <mat-list-item>
-        <mat-icon mat-list-icon color="primary"></mat-icon>
+        <mat-icon mat-list-icon color="primary">{{genderIcon}}</mat-icon>
         <div mat-line>Gender</div>
         <div mat-line>{{user.gender}}</div>
     </mat-list-item>
