profile page completed

--- a/src/app/components/general/filters-modal-content/filters-modal-content.component.html
+++ b/src/app/components/general/filters-modal-content/filters-modal-content.component.html
@@ -15,7 +15,7 @@
   <button class="bb-btn"
           mat-raised-button
           color="primary"
-          (click)="handleSaveFilters()">
+          (click)="filtersForm.handleTripFiltersSubmit()">
           SAVE
   </button>
 </mat-dialog-actions>
