integration in progress

--- a/src/app/components/home-page/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <app-navbar activePage="Home"></app-navbar>
 
-<app-home-stop-map [busStops]="busStops"></app-home-stop-map>
+<app-home-stop-map></app-home-stop-map>
 
 <app-create-trip></app-create-trip>
