hot fix on accordion

--- a/src/app/components/faq-page/faq-accordion/faq-accordion.component.html
+++ b/src/app/components/faq-page/faq-accordion/faq-accordion.component.html
@@ -3,12 +3,14 @@
                        (closed)="setPanelState(false)"
                        *ngFor="let faq of faqs">
       <mat-expansion-panel-header>
-          <mat-panel-title class="bb-title">
-              {{faq.question}}
-          </mat-panel-title>
-          <mat-panel-description>
-              {{faq.hint}}
-          </mat-panel-description>
+        <div class="bb-ac-content">
+            <mat-panel-title class="bb-title">
+                {{faq.question}}
+            </mat-panel-title>
+            <mat-panel-description>
+                {{faq.hint}}
+            </mat-panel-description>
+        </div>
       </mat-expansion-panel-header>
       <p>{{faq.answer}}</p>
   </mat-expansion-panel>
