--- a/src/app/components/faq-page/faq-accordion/faq-accordion.component.html
+++ b/src/app/components/faq-page/faq-accordion/faq-accordion.component.html
@@ -1,4 +1,7 @@
-<mat-accordion>
+<p *ngIf="!faqsExist">
+  An error ocurred while loading FAQs, please try again later.
+</p>
+<mat-accordion *ngIf="faqsExist">
   <mat-expansion-panel (opened)="setPanelState(true)"
                        (closed)="setPanelState(false)"
                        *ngFor="let faq of faqs">
