fixed bugs on styles

--- a/src/app/modules/pages/home/components/create-trip/create-trip-filters-modal/create-trip-filters-modal.component.html
+++ b/src/app/modules/pages/home/components/create-trip/create-trip-filters-modal/create-trip-filters-modal.component.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   mat-stroked-button
-  class="bb-btn bb-create-trip-form-btn bb-text-green"
+  class="bb-btn bb-sliding-form-btn bb-text-green"
   (click)="openFiltersDialog()">
     FILTERS
 </button>
