--- a/src/app/modules/pages/home/components/create-trip/create-trip-form/create-trip-form.component.html
+++ b/src/app/modules/pages/home/components/create-trip/create-trip-form/create-trip-form.component.html
@@ -60,7 +60,7 @@
 
   <button
     mat-raised-button
-    class="bb-btn bb-create-trip-form-btn bb-create-btn mt-4"
+    class="bb-btn bb-sliding-form-btn bb-create-btn mt-4"
     color="primary"
     (click)="handleTripCreate()">
     CREATE
