--- a/src/app/modules/pages/home/components/search/search-filters-modal/search-filters-modal.component.html
+++ b/src/app/modules/pages/home/components/search/search-filters-modal/search-filters-modal.component.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   mat-stroked-button
-  class="bb-btn bb-search-form-btn bb-filters-btn"
+  class="bb-btn bb-sliding-form-btn bb-filters-btn"
   (click)="openFiltersDialog()">
     FILTERS
 </button>
