--- a/src/app/modules/pages/home/components/search/search-form/search-form.component.html
+++ b/src/app/modules/pages/home/components/search/search-form/search-form.component.html
@@ -18,7 +18,7 @@
 
   <button
     mat-raised-button
-    class="bb-btn bb-search-form-btn bb-bond-btn"
+    class="bb-btn bb-sliding-form-btn bb-bond-btn"
     color="primary"
     (click)="handleBondClick($event)">
     BOND
