--- a/src/app/modules/pages/home/components/search/search-result-content/search-result-content.component.sass
+++ b/src/app/modules/pages/home/components/search/search-result-content/search-result-content.component.sass
@@ -1,3 +1,11 @@
+
+.bb-no-trips-msg
+  height: 10rem
+
+  font-size: 1.2rem
+  font-family: 'DM Sans'
+  padding: 2rem
+
 // MOBILE
 @media ( max-width: 700px )
   .bb-search-result-content
