unrelated, added logout

--- a/src/app/modules/pages/profile/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/pages/profile/pages/profile-page/profile-page.component.html
@@ -8,7 +8,9 @@
     <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="enterEditionMode()" class="bb-btn-menu-opt">
             <span class="bb-profile-menu-item">Edit</span>
-            <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-menu-item (click)="logout()" class="bb-btn-menu-opt">
+            <span class="bb-profile-menu-item">Log out</span>
         </button>
     </mat-menu>
 
