integrated chat back, fixed various issues

--- a/src/app/modules/pages/chat/components/chat-feed-header/chat-feed-header.component.html
+++ b/src/app/modules/pages/chat/components/chat-feed-header/chat-feed-header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row class="bb-feed-header">
 
-      <a routerLink="/chat" *ngIf="showMenu">
+      <a routerLink="/chat" *ngIf="showMenu || showBack">
         <button mat-icon-button>
           <mat-icon class="bb-back-icon">arrow_back</mat-icon>
         </button>
@@ -11,23 +11,34 @@
         <span class="bb-title">{{toolbarTitle}}</span>
       </div>
 
-      <button mat-icon-button *ngIf="showMenu" [matMenuTriggerFor]="menu" #matMenuTriggerFor>
-        <mat-icon>more_vert</mat-icon>
-      </button>
+      <div>
+        <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="showMenu" #matMenuTriggerFor>
+          <mat-icon >more_vert</mat-icon>
+        </button>
+      </div>
 
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="openBlockDialog()">
-          <mat-icon>block</mat-icon>
-          <span>Block user</span>
+
+        <button mat-menu-item (click)="navigateToProfile()">
+          <mat-icon>person</mat-icon>
+          <span>View profile</span>
         </button>
-        <button mat-menu-item (click)="openDeleteDialog()">
-          <mat-icon>delete</mat-icon>
-          <span>Delete chat</span>
-        </button>
+
         <button mat-menu-item (click)="openSnackBarPermanentRequest()">
           <mat-icon>sentiment_satisfied_alt</mat-icon>
           <span>Make chat permanent</span>
         </button>
+
+        <button mat-menu-item (click)="openDeleteDialog()">
+          <mat-icon>delete</mat-icon>
+          <span>Delete chat</span>
+        </button>
+
+        <button mat-menu-item (click)="openBlockDialog()">
+          <mat-icon>block</mat-icon>
+          <span>Block user</span>
+        </button>
+
       </mat-menu>
     </mat-toolbar-row>
 </mat-toolbar>
