--- a/src/app/modules/pages/chat/components/chats-list/chats-list.component.html
+++ b/src/app/modules/pages/chat/components/chats-list/chats-list.component.html
@@ -1,6 +1,6 @@
 <div class="bb-chat-list">
   <div *ngFor="let chat of chats; last as last">
-    <a routerLink="/chat/{{chat.id}}">
+    <a routerLink="/chat/{{chat._id}}">
         <app-chat-preview [chat]="chat"></app-chat-preview>
     </a>
     <mat-divider *ngIf="!last"></mat-divider>
