--- a/src/app/modules/pages/chat/components/speech-bubble/speech-bubble.component.html
+++ b/src/app/modules/pages/chat/components/speech-bubble/speech-bubble.component.html
@@ -1,5 +1,5 @@
 <div class="bb-{{speechBubbleType}}-speech">
     <div class="speech-bubble {{speechBubbleType}}">
-        <span>{{message.content.value}}</span>
+        <span>{{message.message}}</span>
     </div>
 </div>
