--- a/src/app/modules/pages/chat/pages/chat-view/chat-view.component.sass
+++ b/src/app/modules/pages/chat/pages/chat-view/chat-view.component.sass
@@ -1,9 +1,9 @@
-.app-chat-feed-header
+.bb-chat-feed-header
     position: sticky
     top:0
     z-index: 9999
 
-.app-chat-feed-input
+.bb-chat-feed-input
     width: 100%
     position: fixed
     bottom: 0
@@ -12,3 +12,12 @@
 .bb-chat-section
     position: relative
     height: calc(100vh - 7rem)
+
+
+.bb-error-msg
+  height: 10rem
+
+  text-align: center
+  font-size: 1.2rem
+  font-family: 'DM Sans'
+  padding: 2rem
