--- a/src/app/modules/pages/home/pages/home-page/home-page.component.html
+++ b/src/app/modules/pages/home/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-navbar activePage="Home"></app-navbar>
+<app-navbar class="d-flex" activePage="Home"></app-navbar>
 
 <app-home-stop-map></app-home-stop-map>
 
