--- a/src/app/modules/pages/chat/components/chat-preview/chat-preview.component.html
+++ b/src/app/modules/pages/chat/components/chat-preview/chat-preview.component.html
@@ -1,6 +1,6 @@
 <button mat-button class="bb-preview">
     <app-user-info
-      [description]="lastMessage?.content?.value"
-      [user]="chat.to!"
+      [description]="lastMessage?.message"
+      [user]="to!"
     ></app-user-info>
 </button>
