--- a/src/app/modules/pages/profile/components/edition-form/edition-form.component.html
+++ b/src/app/modules/pages/profile/components/edition-form/edition-form.component.html
@@ -55,7 +55,7 @@
       <button mat-raised-button class="bb-btn bb-btn-change" (click)="cancelEdit()">
         DISMISS
       </button>
-      <button mat-raised-button class="bb-btn bb-btn-change" color="primary" (click)="submitEdit()" >
+      <button [disabled]="isDisabled" mat-raised-button class="bb-btn bb-btn-change" color="primary" (click)="submitEdit()" >
         SAVE CHANGES
       </button>
     </div>
