--- a/src/app/modules/pages/chat/pages/chats-view/chats-view.component.sass
+++ b/src/app/modules/pages/chat/pages/chats-view/chats-view.component.sass
@@ -1,4 +1,12 @@
 
+.bb-error-msg
+  height: 10rem
+
+  text-align: center
+  font-size: 1.2rem
+  font-family: 'DM Sans'
+  padding: 2rem
+
 @media (min-width: 850px)
   .bb-chat-page-article
     margin-left: 10rem
