--- a/src/app/modules/pages/signup/pages/signup-page/signup-page.component.sass
+++ b/src/app/modules/pages/signup/pages/signup-page/signup-page.component.sass
@@ -8,7 +8,7 @@
 
     margin-right: 5%
     margin-left: 5%
-    margin-top: 5%
+    margin-top: 1.2rem
 
     font-family: 'Montserrat'
     font-size: 1.2rem
